ISSUE #147 - Auto comments readable, auto comments not editable/deleteable

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -280,7 +280,6 @@ issue-comp .issueCompComment {
 
 issue-comp .issueCompCommentTitle {
   margin: 10px 0;
-  word-break: break-all;
 }
 
 issue-comp .issueCompTextActions {
@@ -320,6 +319,10 @@ issue-comp #descriptionAndComments {
   overflow-y:auto;
   overflow-x:hidden;
   background: #f0f0f0;
+}
+
+issue-comp .commentTextLight {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 /** Issue Screen Shot  ************************************************************************************************/
